<resources>
    <string name="app_name">ResultsTrack - Survey</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">RT-Survey</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="designation_prompt">Select Designation</string>
    <string name="title_prompt">Select Title</string>
    <string name="prompt_phone">Phone no</string>
    <string name="prompt_Address">Address</string>
    <string name="addMember">Add Committee Member</string>

    <string-array name="designations">
        <item>Chairpersonship</item>
        <item>Convener cum Secretary</item>
        <item>Member/Sahiya</item>
    </string-array>

    <string-array name="titles">
        <item>Village-level elected representative</item>
        <item>Anganwadi worker</item>
        <item>Village Health, Sanitation and Nutrition Committee Member/Sahiya</item>
        <item>SHG representative</item>
        <item>Child representative</item>
        <item>School Management Committee – Male representative</item>
        <item>School Management Committee – Female representative</item>
        <item>Active social worker elected by the Gram Sabha</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="sync_time_intervals_prompt">Interval (in minutes)</string>
    <integer-array name="sync_time_intervals">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </integer-array>
    <string name="title_activity_proximity_alert">ProximityAlert</string>
</resources>
